<resources>
    <string name="app_name">CuteTasks</string>
    <string name="hintCorreo">email</string>
    <string name="hintPass">password</string>
    <string name="login">Login</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="logout">Logout</string>
    <string name="mas">Mas</string>
    <string name="done">Done</string>
    <string name="tarea">Tarea</string>
    <string name="cute_tasks">CuteTasks</string>
    <string name="todo">TODO</string>
    <string name="te">te</string>
    <string name="tasks">Tasks</string>
    <string name="cu">Cu</string>
    <string name="modify">MODIFY</string>
    <string name="todo2">TODO</string>
    <string name="fail">Fallo al registrar usuario.</string>
    <string name="register_ok">Usuario registrado correctamente.</string>
    <string name="auth_fail">Fallo de autenticación.</string>
    <string name="modify_task">Tarea modificada</string>
    <string name="task_ok">Tarea realizada</string>
</resources>