<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="214dp"
        android:layout_height="193dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_pijlabs" />

    <TextView
        android:id="@+id/splash_cu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/cute_notes"
        android:text="@string/cu"
        android:textColor="#673AB7"
        android:textSize="52sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/splash_te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/cute_notes"
        android:text="@string/te"
        android:textColor="#673AB7"
        android:textSize="52sp"
        app:layout_constraintStart_toEndOf="@+id/splash_cu"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/splash_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/cute_notes"
        android:text="@string/tasks"
        android:textColor="#673AB7"
        android:textSize="52sp"
        app:layout_constraintStart_toEndOf="@+id/splash_te"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>